# MallAgent

./: .gitignore  README.md
after_sales_agent/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
after_sales_agent/app/: __init__.py  main.py
after_sales_agent/app/adapters/: __init__.py  ecommerce_gateway.py  mall_gateway.py
after_sales_agent/app/agent/: __init__.py  context.py  deep_subagents.py  graph.py  main_agent.py  models.py  prompts.py  state.py
after_sales_agent/app/api/: __init__.py  dependencies.py  routes.py  schemas.py
after_sales_agent/app/config/: __init__.py  app.py  llm.py  mall.py  rag.py  storage.py
after_sales_agent/app/core/: __init__.py
after_sales_agent/app/diagnostics/: __init__.py  readiness.py  service_smoke.py
after_sales_agent/app/domain/: __init__.py  enums.py  errors.py  models.py
after_sales_agent/app/knowledge/: __init__.py
after_sales_agent/app/services/: __init__.py  audit_log.py  chat_service.py
after_sales_agent/app/tools/: __init__.py  after_sales_tools.py  logistics_tools.py  order_tools.py  policy_tools.py  product_tools.py  refund_tools.py  runtime.py
after_sales_agent/app/web/: app.js  index.html  styles.css
after_sales_agent/migrations/versions/: 20260713_02_create_after_sales_cases.py  20260715_03_create_agent_conversations.py
after_sales_agent/scripts/: ingest_rag_sources.py  smoke_test_idempotency.py  smoke_test_services.py
after_sales_agent/scripts/migrations/: env.py
after_sales_agent/tests/: fakes.py
after_sales_agent/tests/smoke/: smoke_test_services.py  (+1 more)
(+128 files in other folders)
