[project]
name = "after-sales-agent"
version = "0.1.0"
description = "电商售后智能客服 Agent MVP"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "deepagents>=0.6.12",
  "langchain>=1.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-redis>=0.1.0",
  "langchain-core>=0.2.0",
  "langchain-deepseek>=1.1.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.14.0",
  "asyncpg>=0.29.0",
  "pymilvus>=2.4.0",
  "openpyxl>=3.1.0",
  "FlagEmbedding>=1.2.10",
  "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools.packages.find]
where = ["app"]
